docs/refs/script-api/server/0.1.0/molangvariablemap.md
# `MolangVariableMap`

> 文档版本：1.21.60.21

`MolangVariableMap`类。script_api.mojang-minecraft.molangvariablemap.description

## 方法

/// define
`constructor`


///

script_api.mojang-minecraft.molangvariablemap.constructor.description

```js
new constructor(): MolangVariableMap
```

/// html | div.result
//// define
返回值：[`MolangVariableMap`](./molangvariablemap.md)

- script_api.mojang-minecraft.molangvariablemap.constructor.return


////

///


/// define
`setColorRGB`


///

script_api.mojang-minecraft.molangvariablemap.setcolorrgb.description

```js
setColorRGB(variableName: string, color: Color): void
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.mojang-minecraft.molangvariablemap.setcolorrgb.variablename.description


////

//// define
`color`：[`Color`](./color.md)

- script_api.mojang-minecraft.molangvariablemap.setcolorrgb.color.description


////

//// define
返回值：`void`

- script_api.mojang-minecraft.molangvariablemap.setcolorrgb.return


////

///


/// define
`setColorRGBA`


///

script_api.mojang-minecraft.molangvariablemap.setcolorrgba.description

```js
setColorRGBA(variableName: string, color: Color): void
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.mojang-minecraft.molangvariablemap.setcolorrgba.variablename.description


////

//// define
`color`：[`Color`](./color.md)

- script_api.mojang-minecraft.molangvariablemap.setcolorrgba.color.description


////

//// define
返回值：`void`

- script_api.mojang-minecraft.molangvariablemap.setcolorrgba.return


////

///


/// define
`setSpeedAndDirection`


///

script_api.mojang-minecraft.molangvariablemap.setspeedanddirection.description

```js
setSpeedAndDirection(variableName: string, speed: float, direction: Vector): MolangVariableMap
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.mojang-minecraft.molangvariablemap.setspeedanddirection.variablename.description


////

//// define
`speed`：`float`

- script_api.mojang-minecraft.molangvariablemap.setspeedanddirection.speed.description


////

//// define
`direction`：[`Vector`](./vector.md)

- script_api.mojang-minecraft.molangvariablemap.setspeedanddirection.direction.description


////

//// define
返回值：[`MolangVariableMap`](./molangvariablemap.md)

- script_api.mojang-minecraft.molangvariablemap.setspeedanddirection.return


////

///


/// define
`setVector3`


///

script_api.mojang-minecraft.molangvariablemap.setvector3.description

```js
setVector3(variableName: string, vector: Vector): MolangVariableMap
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.mojang-minecraft.molangvariablemap.setvector3.variablename.description


////

//// define
`vector`：[`Vector`](./vector.md)

- script_api.mojang-minecraft.molangvariablemap.setvector3.vector.description


////

//// define
返回值：[`MolangVariableMap`](./molangvariablemap.md)

- script_api.mojang-minecraft.molangvariablemap.setvector3.return


////

///

