docs/refs/script-api/server/1.5.0/molangvariablemap.md
# `MolangVariableMap`

> 文档版本：1.21.0.20

`MolangVariableMap`类。script_api.@minecraft/server.molangvariablemap.description

## 方法

/// define
`constructor`


///

script_api.@minecraft/server.molangvariablemap.constructor.description

```js
new constructor(): MolangVariableMap
```

/// html | div.result
//// define
返回值：[`MolangVariableMap`](./molangvariablemap.md)

- script_api.@minecraft/server.molangvariablemap.constructor.return


////

///


/// define
`setColorRGB`


///

script_api.@minecraft/server.molangvariablemap.setcolorrgb.description

```js
setColorRGB(variableName: string, color: RGB): void
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.@minecraft/server.molangvariablemap.variablename.setcolorrgb.description


////

//// define
`color`：[`RGB`](./rgb.md)

- script_api.@minecraft/server.molangvariablemap.color.setcolorrgb.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.molangvariablemap.setcolorrgb.return


////

///


/// define
`setColorRGBA`


///

script_api.@minecraft/server.molangvariablemap.setcolorrgba.description

```js
setColorRGBA(variableName: string, color: RGBA): void
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.@minecraft/server.molangvariablemap.variablename.setcolorrgba.description


////

//// define
`color`：[`RGBA`](./rgba.md)

- script_api.@minecraft/server.molangvariablemap.color.setcolorrgba.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.molangvariablemap.setcolorrgba.return


////

///


/// define
`setFloat`


///

script_api.@minecraft/server.molangvariablemap.setfloat.description

```js
setFloat(variableName: string, number: float): void
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.@minecraft/server.molangvariablemap.variablename.setfloat.description


////

//// define
`number`：`float`

- script_api.@minecraft/server.molangvariablemap.number.setfloat.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.molangvariablemap.setfloat.return


////

///


/// define
`setSpeedAndDirection`


///

script_api.@minecraft/server.molangvariablemap.setspeedanddirection.description

```js
setSpeedAndDirection(variableName: string, speed: float, direction: Vector3): void
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.@minecraft/server.molangvariablemap.variablename.setspeedanddirection.description


////

//// define
`speed`：`float`

- script_api.@minecraft/server.molangvariablemap.speed.setspeedanddirection.description


////

//// define
`direction`：[`Vector3`](./vector3.md)

- script_api.@minecraft/server.molangvariablemap.direction.setspeedanddirection.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.molangvariablemap.setspeedanddirection.return


////

///


/// define
`setVector3`


///

script_api.@minecraft/server.molangvariablemap.setvector3.description

```js
setVector3(variableName: string, vector: Vector3): void
```

/// html | div.result
//// define
`variableName`：`string`

- script_api.@minecraft/server.molangvariablemap.variablename.setvector3.description


////

//// define
`vector`：[`Vector3`](./vector3.md)

- script_api.@minecraft/server.molangvariablemap.vector.setvector3.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.molangvariablemap.setvector3.return


////

///

